--- a/aboutme-style.css
+++ b/aboutme-style.css
@@ -8,7 +8,7 @@ body{
 h1{
     color: #e27d60;
     -webkit-text-stroke-width: 1px;
-   -webkit-text-stroke-color: white;
+   -webkit-text-stroke-color: black;
    font-family: 'Indie Flower', cursive;
    text-align: center;
 }
@@ -23,11 +23,35 @@ p{
     font-size: 25px;
     color: #c38d9e;
     -webkit-text-stroke-width: 0.5px;
-    -webkit-text-stroke-color: white;
+    -webkit-text-stroke-color: black;
     
 
 }
+h1:first-child:first-letter {
+    color: #903;
+    font-size: 60px;
+    line-height: 60px;
+    padding-top: 4px;
+    padding-right: 8px;
+    padding-left: 3px;
 
+}
+h2:first-child:first-letter {
+    color: #903;
+    font-size: 60px;
+    line-height: 60px;
+    padding-top: 4px;
+    padding-right: 8px;
+    padding-left: 3px;
+
+}
+a{
+    text-decoration: none;
+}
+a:hover{
+    text-decoration: underline;  
+    color: red;
+}
 li{
     font-family: 'Righteous', cursive;
     font-size: 20px;
